traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:22: error: not enough arguments for method setY: (x$1: Int)Unit.
Unspecified value parameter x$1.
    setPos(getX(),setY()+1)
                      ^